# VertexEngine-CLI-Code

./: README.md  pyproject.toml
src/VertexEngine_CLI.egg-info/: PKG-INFO  SOURCES.txt
src/vertex/: __main__.py  templates.py
