[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "VertexEngine-CLI"
version = "1.2rc2"
description = "An Offical CLI library for VertexEngine."
authors = [
  { name = "Tyrel Miguel", email = "annbasilan0828@gmail.com" }
]
dependencies = [
  "pygame>=2.0",
  "PyQt6>=6.7",
  "pyinstaller>=6.5.0",
  "VertexEngine>=1.0.1"
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

[project.scripts]
vertex = "vertex.__main__:main"

[project.urls]
Documentation = "https://vertexenginedocs.netlify.app/"
Source = "https://github.com/VertexEngine-Projects/VertexEngine-CLI-Code"
Issues = "https://github.com/VertexEngine-Projects/VertexEngine-CLI-Code/issues"
[tool.setuptools.packages.find]
where = ["src"]
